--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,24 @@ body {
   line-height: 1.6;
 }
 
+.playlist-hero {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #000;
+  overflow: hidden;
+}
+
+.playlist-hero__video {
+  width: 100%;
+  height: 100%;
+  border: 0;
+  z-index: 1;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -280,6 +298,11 @@ label {
 }
 
 @media (min-width: 768px) {
+  .playlist-hero__video {
+    width: calc(100vh * 9 / 16);
+    height: 100vh;
+  }
+
   .nav__links {
     display: flex;
   }
